Beaucoup de changements Beaucoup de correction de bugs

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,11 +7,16 @@
     tools:context="com.nitorac.lplanning.SettingsActivity">
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/listViewSettings"
         android:layout_gravity="center_horizontal"
         android:fastScrollEnabled="false"
         android:smoothScrollbar="true"
-        android:drawSelectorOnTop="true" />
+        android:drawSelectorOnTop="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="false" />
 </RelativeLayout>
