--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,10 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:id="@+id/relativeLayout"
+    android:focusableInTouchMode="true"
+    android:focusable="true">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,7 +18,6 @@
         android:textColor="#ff0800ff"
         android:textSize="@android:dimen/app_icon_size"
         android:textStyle="bold"
-        android:layout_below="@+id/imageButton"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
@@ -26,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="Attendez ..."
         android:id="@+id/matiere"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="#ff3d3d3d"
         android:gravity="center"
         android:layout_below="@+id/salle"
@@ -36,15 +38,14 @@
         android:layout_alignEnd="@+id/salle" />
 
     <ImageButton
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:onClick="refreshClick"
         android:src="@drawable/ic_action_refresh"
+        android:contentDescription="Refresh button"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="refreshClick" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
