--- a/app/src/main/res/menu/menu_add_event.xml
+++ b/app/src/main/res/menu/menu_add_event.xml
@@ -2,6 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nitorac.lplanning.AddEventActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/add_new_event"
+        android:icon="@drawable/ic_add"
+        app:showAsAction="ifRoom"
+        android:title="@string/action_add"
+        android:onClick="addEvent">
+    </item>
+    <item
+        android:id="@+id/delete_event"
+        android:icon="@drawable/ic_delete"
+        app:showAsAction="ifRoom"
+        android:title="@string/delete_event"
+        android:onClick="deleteEvent">
+    </item>
 </menu>
